--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
+        mavenCentral()
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
     }
 }
 
 allprojects {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        google()
         jcenter()
+        maven { url "https://jitpack.io" }
+        mavenCentral()
     }
 }
 
