--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 buildscript {
     repositories {
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
+        //https://github.com/greenrobot/greenDAO
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
     }
 }
 
 allprojects {
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
         google()
-        jcenter()
-        maven { url "https://jitpack.io" }
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
