--- a/greendao/src/main/AndroidManifest.xml
+++ b/greendao/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lany.greendao">
+    package="com.github.lany192.sqlite.greendao">
 
     <application
         android:name=".MyApp"
