--- a/room/build.gradle
+++ b/room/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 31
     defaultConfig {
         applicationId "com.github.lany192.sqlite.room"
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -16,9 +15,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    greendao {
-        schemaVersion 1000 //数据库schema版本，也可以理解为数据库版本号
     }
 }
 
@@ -31,14 +27,15 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.material:material:1.3.0'
-    //https://github.com/greenrobot/greenDAO
-    implementation 'org.greenrobot:greendao:3.3.0'
+
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
 
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.8'
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:2.3.0"
 }
